--- a/political-research/india-2047-research-1.html
+++ b/political-research/india-2047-research-1.html
@@ -45,6 +45,7 @@
             </button>
         </nav>
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
+            <a href="/" class="mobile-menu-button block py-2 text-stone-600">🔙Home</a>
             <a href="#foundation" class="block py-2 text-stone-600">The Foundation</a>
             <a href="#engine" class="block py-2 text-stone-600">The Economic Engine</a>
             <a href="#future" class="block py-2 text-stone-600">The Future</a>
