--- a/educational-research/data-structure-edu-1.html
+++ b/educational-research/data-structure-edu-1.html
@@ -182,9 +182,12 @@
     <aside id="sidebar" class="w-full md:w-64 bg-white md:border-r border-b md:border-b-0 border-gray-200 md:fixed md:h-full top-0 left-0 z-20">
         <div class="p-6">
             <h1 class="text-2xl font-bold text-gray-800">Data Structures</h1>
-            <p class="text-sm text-gray-500 mt-1">An Interactive Guide</p>
+            <p class="text-sm text-gray-500 mt-1">An Interactive Gamification Guide</p>
         </div>
         <nav class="mt-2 flex-1 px-4">
+            <a href="/" class="group flex items-center px-3 py-3 text-sm font-medium rounded-md text-gray-600">
+                <span class="mr-3 text-lg">🏕️</span> Home
+            </a>
             <a href="#introduction" class="sidebar-link group flex items-center px-3 py-3 text-sm font-medium rounded-md text-gray-600">
                 <span class="mr-3 text-lg">👋</span> Introduction
             </a>
@@ -198,7 +201,7 @@
                 <span class="mr-3 text-lg">📚</span> Stacks
             </a>
             <a href="#queue" class="sidebar-link group flex items-center px-3 py-3 text-sm font-medium rounded-md text-gray-600">
-                <span class="mr-3 text-lg"> FIFO </span> Queues
+                <span class="mr-3 text-lg">🚩</span> Queues
             </a>
             <a href="#hash-table" class="sidebar-link group flex items-center px-3 py-3 text-sm font-medium rounded-md text-gray-600">
                 <span class="mr-3 text-lg">🔑</span> Hash Tables
